kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ivolve
  labels:
    name: ivolve
    environment: production
    project: clouddevopsproject
